<?xml version="1.0" ?>
<package format="3">
  <name>cybertech_mock</name>
  <version>0.1.0</version>

  <description>
    Configuration package for the KUKA CYBERTECH manipulator family using mock
    hardware.
  </description>

  <maintainer email="support@picknik.ai">MoveIt Pro Maintainer</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>kuka_cybertech_support</depend>
  <depend>kuka_mock_hardware_interface</depend>

  <exec_depend>moveit_studio_agent</exec_depend>
  <exec_depend>moveit_pro_behavior</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_clang_tidy</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>picknik_ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
